refactor: rename Range to PriceRange

--- a/src/components/UI/PriceRange/PriceRange.module.css
+++ b/src/components/UI/PriceRange/PriceRange.module.css
@@ -1,16 +1,16 @@
-.range {
+.price_range {
   display: grid;
   grid-template-columns: 0.5fr 2fr 0.5fr;
   gap: 1rem;
 }
 
-.range > div:first-child {
+.price_range > div:first-child {
   display: flex;
   justify-content: flex-end;
   text-align: end;
 }
 
-.range > div:last-child {
+.price_range > div:last-child {
   display: flex;
   justify-content: flex-start;
   text-align: start;
