--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,12 @@
   padding: 0;
 }
 
+:root {
+  --primary-color: #fff;
+  --secondary-color: #191919;
+  --terciary-color: #3ccfd5;
+}
+
 html {
   min-height: 100%;
   display: flex;
